# code-rag-eval

./: .gitignore  README.md  TODO.md  pyproject.toml
adapters/: code_rag_adapter.py  simple_adapter.py
datasets/: sample-benchmark.yaml  ultrameme-benchmark.yaml
examples/: simple_adapter.py
src/rag_eval/: __init__.py  __main__.py  cli.py
src/rag_eval/interfaces/: __init__.py  rag_system.py
src/rag_eval/metrics/: __init__.py  core.py
src/rag_eval/models/: __init__.py  chunk.py  dataset.py  results.py
src/rag_eval/reporting/: __init__.py  json_reporter.py  markdown_reporter.py
src/rag_eval/runner/: __init__.py  benchmark_runner.py  dataset_loader.py
tests/: test_metrics.py
